# dots

./: installPupilLabFedora30.instructions
git/: .gitconfig.aliases  install_aliases.sh
install_scripts/: cquery_install.sh  nvim.sh
install_scripts/LINUX/: buildOpenCv.sh  installCCLS.sh  installGO.sh  installNerdFonts.sh  installRgFZFFromSource.sh  installWebDevelopment.sh  nvim.sh  setupPupilLabs.sh  setupUbuntu.sh
install_scripts/LINUX/ASDF/: installASDF.sh  installERLANG.sh  installGO.sh
install_scripts/LINUX/LSP/: installErlangSP.sh  installLuaLSP.sh  setBinHome.sh
install_scripts/LINUX/boost/: CMakeLists.txt  install.sh
install_scripts/LINUX/boost/01-HelloWorld/: CMakeLists.txt  hello.cpp
install_scripts/LINUX/boost/01-HelloWorldCpp/: CMakeLists.txt  test_suite.cpp
install_scripts/LINUX/git/: install_aliases.sh
install_scripts/LINUX/python/: .virtualenvwrapper.conf  virtualenvwrapper_config.sh
install_scripts/LINUX/tmux/: .tmux.conf  install_tmux.sh
install_scripts/LINUX/vim_config/lua/: init.lua
install_scripts/LINUX/vim_config/luaConfig/: init.lua  lazy-lock.json
install_scripts/LINUX/vim_config/luaConfig/lua/: common.lua  lsp.lua  plugins.lua
install_scripts/LINUX/vim_config/vimscript/: .nvim_plug  init.vim
install_scripts/WINDOWS/: backupChoco.p1  installOtherPackages.bat  packages.config  setup_vim.bat  vim_install.bat
tmux/: install_tmux.sh
vim/: .nvim_coc_config  .nvim_plug  .nvim_py  coc-settings.json  init.vim
vim/vimscript/: .nvim_markdown  .nvim_nerdtree  init.vim
(+18 files in other folders)
