cmake_minimum_required(VERSION 2.8)
project(boost_cpp_tests)
include_directories(src)
add_executable(test_suite test_suite.cpp)
if (UNIX)
    message(status "Setting GCC flags")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions -g -Wall")
endif()
message(status "** CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
find_package(Boost 1.47 COMPONENTS filesystem unit_test_framework REQUIRED)
message(status "** Boost Include: ${Boost_INCLUDE_DIR}")
message(status "** Boost Libraries: ${Boost_LIBRARY_DIRS}")
message(status "** Boost Libraries: ${Boost_LIBRARIES}")
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
target_link_libraries(test_suite ${Boost_LIBRARIES})
ENABLE_TESTING()
ADD_TEST(NAME 01-HelloWorldCpp COMMAND test_suite)
